--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-<h1>学习之路</h1>
-<h2>啥也没有</h2>
+<h1>我的网站</h1>
+<h2>其实没什么好看的</h2>
+<h3>下面是我的哔哩哔哩账号</h3>
+<p><a
+   href="https://space.bilibili.com/333504161?from=search&seid=366179495289063156target="_blank"></a>爱加不加。</p>
