--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 <p><a
    href="https://space.bilibili.com/333504161?from=search&seid=366179495289063156target="_blank">bilibili</a>爱加不加。</p>
 <img
-   serc="https://i2.hdslb.com/bfs/face/2169267e0c2789e01a81531c30d6df630cb6e591.jpg"alt="图片">
+   src="https://i2.hdslb.com/bfs/face/2169267e0c2789e01a81531c30d6df630cb6e591.jpg"alt="图片">
