--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <h2>其实没什么好看的</h2>
 <h3>下面是我的哔哩哔哩账号</h3>
 <p><a
-   href="https://space.bilibili.com/333504161?from=search&seid=366179495289063156target="_blank">bilibili</a>看看就可以了。</p>
+   href="https://i0.hdslb.com/bfs/archive/341521dac44cbb7d7f7e64638e770675a353ebf7.gif_blank">bilibili</a>看看就可以了。</p>
 <img
    src="https://i2.hdslb.com/bfs/face/2169267e0c2789e01a81531c30d6df630cb6e591.jpg"alt="图片">
 
