--- a/MeiTu.html
+++ b/MeiTu.html
@@ -4,8 +4,8 @@
     <head>
      <style type="text/css">
        img{
-          width:300px;
-          height:400px;
+          width:350px;
+          height:450px;
       }
      </style>
      
@@ -16,6 +16,8 @@
        <h1>美图分享</h1>
         <img src="https://original.img.cheerfun.dev/img-original/img/2020/03/24/00/48/19/80316919_p0.jpg">
         <img src="https://original.img.cheerfun.dev/img-original/img/2020/03/23/00/00/12/80296142_p0.png">
+        <img src="https://original.img.cheerfun.dev/img-original/img/2020/03/23/01/06/35/80297961_p0.png">
+        <img src="https://original.img.cheerfun.dev/img-original/img/2020/03/24/00/00/11/80315648_p0.png">
         <p>干就完了！</p>
         
     </body>
